--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     padding: 0; /* imposta quanto spazio ci deve essere */ 
     font-family: Arial, sans-serif; /* imposta il font */ 
   }
+
+  .h1, h2, h3{
+    margin: 0;
+    padding: 0;
+  }
   
   .container {
     width: 100%; /* imposta la larghezza del container */ 
@@ -14,29 +19,21 @@ body {
   .intestazione {
     background: linear-gradient(to bottom right, #4deaff, #0678d4); /* imposta il colore del background dell'intestazione */ 
     color: white; /* imposta il colore del testo*/ 
-    padding:30px; 
+    padding:0px; 
     font-size: 40px; /* imposta la grandezza del font */ 
   }
   
   .sottotitolo{
     font-size: 30px;
   }
-  
-  .blocchi {
-    display: flex;
-    flex-wrap: wrap; /*fa adattare il testo al bordo del blocco*/ 
-    justify-content: space-between; /*crea spazio tra i blocchi */ 
-    padding: 20px;
+
+  .sottosottotitolo{
+    font-size: 20px;
+    padding: 0px;
+    margin: 0px;
   }
   
-  .contenutoblocchi {
-    width: calc(25% - 20px); 
-    background: #f2f2f2;
-    padding: 20px;
-    box-sizing: border-box;  /*limita fin quando si puo scrivere, in questo caso al bordo box*/ 
-    margin-bottom: 20px;
-  }
-  
+
   .infobox { /* stile per il container dell'infobox*/ 
     display: flex;
     justify-content: space-between; /*crea spazio tra le informazioni dell'infobox */ 
@@ -73,9 +70,73 @@ body {
   }
   
   p {
+    
     font-size: 1.2rem; /* imposta la grandezza del tag <p> utilizzato per la descrizione*/ 
   }
   
   a {
     color: rgb(240, 54, 21); /*colora gli hyperlink del codice rgb selezionato (in questo caso rosso)*/
+  }
+
+  .nav {
+    width: 100vw;
+    height: 10vh;
+    color: white;
+    text-align: center;
+    margin: 10px 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    place-items: center;
+  }
+
+  .btn {
+    appearance: none;
+    background-image: linear-gradient(135deg, #0678d4 40%, #00e1ff);
+    border: 2px solid #d8d7d7;      
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s cubic-bezier(.60, 1, 0.32, 1.2);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+
+  }
+  
+  .btn:disabled {
+    pointer-events: none;
+  }
+  
+  .btn:hover {
+    box-shadow: rgba(66, 62, 62, 0.432) 0 8px 15px;
+    background-image: linear-gradient(135deg, #0678d4 40%, #6febfc);
+    transition: 0.5s;
+    transform: translateY(-2px);
+  }
+  
+  .btn:active {
+    box-shadow: none;
+    transform: translateY(0);
+  }
+  
+  .section{
+    width: 95%;
+    padding: 0%; 
+    display: flex; 
+    flex-direction: column;  
   }
